# snow

./: .editorconfig  .gitignore  .travis.yml  LICENSE  Makefile  README.md  example.c
.builds/: alpine.yml  freebsd.yml  linux.yml
exampleproject/: .gitignore  CMakeLists.txt  Makefile  README.md  exampleproject
exampleproject/src/: main.c  vector.c  vector.h
scripts/: version-bump.sh
snow/: snow.h  test.c
test/: .gitignore  Makefile  README.md  test.c  test.h
test/cases/: around.c  asserts.c  commandline  commandline.c  defer  defer.c  tests.c
test/expected/: around-after-complements-subdesc  around-before-after  around-before-after-only-in-describe  around-before-after-only-in-subdesc  around-before-in-describe-after-in-subdesc  around-subdesc-before-after-shadow  around-subdesc-parent-before-after  commandline-help  commandline-log-output  commandline-no-timer  commandline-quiet  commandline-timer  commandline-version  defer-basic  defer-plus-around  tests-all  tests-single  tests-specific
test/snow/: snow.h
